font sizing and spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     background-repeat: no-repeat;
     background: #060c21;
     overflow-y: hidden;
+    font-family: 'Edu SA Beginner', cursive;
 }
 
 .title {
@@ -65,6 +66,7 @@ h2 {
     border-top: 0;
     flex-grow: 1;
     text-align: center;
+    font-size: 22px;
 }
 
 .player-score-box,
@@ -239,6 +241,7 @@ h2 {
 .result-token-container {
     display: flex;
     margin: 15px;
+    margin-top: 30px;
     width: 100%;
     flex-direction: row;
     justify-content: space-around;
@@ -249,6 +252,7 @@ h2 {
 .result-text,
 .play-text {
     font-size: 32px;
+    text-align: center;
     font-weight: 800;
     color: lightgrey;
 }
@@ -256,6 +260,7 @@ h2 {
 .player-choice-text,
 .elroy-choice-text {
     color: lightgrey;
+    font-size: 20px;
 }
 
 .rules-box-bottom {
@@ -466,7 +471,7 @@ footer {
         cursor: pointer;
         font-size: 20px;
         font-weight: bold;
-        margin: 5px 25px;
+        margin: 5px 35px;
     }
 
     h1 {
@@ -549,6 +554,11 @@ footer {
 
     .rules-box-bottom {
         display: none;
+    }
+
+    .player-choice-text,
+    .elroy-choice-text {
+        font-size: 24px;
     }
 
 }
